added config for firebase and package.json

--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,8 @@
     "name": "functions", 
     "versions": "1.0.0",
     "description": "Brian S. Boros Official Website",
-    "main": "test.js", 
-    "scripts": {}, 
+    "main": "firebase.js", 
+    "scripts": {
+    }, 
     "author": "Brian S. Boros"
 }
